--- a/scss/lisbon.scss
+++ b/scss/lisbon.scss
@@ -22,20 +22,25 @@
 }
 
 @mixin beyond-title {
-    width:42px;
-    height:17px;
+    width:auto;
+    height:26px;
     position:absolute;
     font-size:14px;
     font-weight:bold;
-    
-}
+     border-bottom: 3px solid #fdb818;
+    }
+
+@mixin article-left {
+    top:300px;
+    }
+
+
 
 body {
     font-family: 'Roboto Mono', monospace;
     font-size: 18px;
-    line-height: 165%;
-    
-}
+    line-height: 150%;
+    }
 
 .wrapper {
     margin:0 40px 0 40px;
@@ -51,8 +56,6 @@ h2 {
     font-family: 'Fira Sans Extra Condensed', sans-serif;
     font-size: 42px;
     color:#626262;
-
-    
 }
 
 h3 {
@@ -173,7 +176,8 @@ p {
 .image-frame {
   position: relative;
   height:700px;
-    margin-top:80px;
+margin-top:60px;
+margin-bottom:20px;
 }
 
 .img1 {
@@ -190,7 +194,7 @@ p {
 
 .img3 {
   position: absolute;
-  right:330px;
+  right:290px;
     top: 80px;
   z-index: 2;
 }
@@ -198,23 +202,19 @@ p {
 .img4 {
  position: absolute;
   z-index: 1;
-  right:40px;
+  right:0;
 }
 
 
 
 .title1 {
    @include article-title;
-    left:570px;
-
+    right:0;
 }
 
 .title2 {
   @include article-title;
-   left:40px;
-   
-    
-}
+   }
 
 .title1 h1 {
     padding-top:100px;
@@ -240,9 +240,15 @@ p {
 
 .article2 {
     @include article-body;
-    left:40px;
     top:300px;
     margin-left:45px;
+}
+
+.article3 {
+    @include article-body;
+    @include article-left;
+    
+    
 }
 
 .article2 { 
@@ -277,10 +283,15 @@ p {
     top:90px;
 }
 
+.beyond3 {
+    @include beyond-title;
+  margin:20px 0 0 -38px;
+}
+
 .center-title {
     text-align:center;
     color:#453A94;
-    padding:100px 0 70px 0;
+    padding:70px 0 70px 0;
 }
 
 .text-box {
@@ -313,6 +324,116 @@ p {
 
 .text-box-middle p {
     color:#453A94;
+    }
+
+.weather-box {
+    width:1180px;
+    height:269px;
+    border:1px solid #CFCFCF;
+    display:inline-block;
+    margin-top:90px;
+}
+
+.weather1 {
+    width:590px;
+    height:269px;
+    border-right:1px solid #CFCFCF;
+    display:inline-block;
+}
+
+.weather2 {
+    width:575px;
+    height:269px;
+    display:inline-block;
+    padding-left:35px;
     
 }
 
+.weather-entry {
+    border-right:2px solid #CFCFCF;
+    padding-right:40px;
+    padding-bottom:75px;
+    margin:100px 0 0px 0px;
+    display:inline-block;
+    width:150px;
+    height:64px;
+
+}
+
+.weather1:first-child {
+    padding-left:50px;
+}
+
+.weather-entry-last {
+    padding-right:40px;
+    padding-bottom:75px;
+    margin:100px 0 0px 0px;
+    display:inline-block;
+    width:150px;
+    height:64px;
+    
+}
+
+
+.weather-entry, .weather-entry-last {
+    
+    h4 {
+        font-size:50px;
+           }
+    p {
+        margin-top:10px;
+        margin-bottom:10px;
+        text-align:center;
+    }
+}
+
+.weather2 .weather-entry {
+    margin-left:100px;
+    padding-right:20px;
+}
+
+.weather2 .weather-entry p, .weather2 .weather-entry-last p {
+    line-height:250%;
+    margin-top:-8px;
+}
+
+.weather2 .weather-entry-last {
+    padding-left:-10px;
+}
+
+.weather2 h2 {
+    padding-right:45px;
+}
+
+.weather-box h2 {
+    text-align:center;
+    padding-top:20px;
+    font-weight:bold;
+    }
+
+.list-number {
+    font-family: 'Fira Sans Extra Condensed', sans-serif;
+    color:#fdb818;
+    font-size:42px;
+}
+
+.six-steps p {
+    padding-bottom:25px;
+    
+}
+
+.google-map-img {
+    padding:50px 0 35px 0;
+}
+
+.strelica {
+    width:30px;
+    margin: 0 auto;
+    padding:70px 0 0 0;
+}
+
+.center-button {
+    width:320px;
+    margin:0 auto;
+    padding: 50px 0 50px 0;
+}
