--- a/scss/lisbon.scss
+++ b/scss/lisbon.scss
@@ -1,119 +1,113 @@
 @mixin article-title {
-    width:580px;
-    height:269px;
-    border:2px solid #CFCFCF;
+    width: 580px;
+    height: 269px;
+    border: 2px solid #CFCFCF;
     z-index: auto;
-    position:absolute;
-    }
+    position: absolute;
+}
 
 @mixin article-body {
-    width:480px;
-    height:399px;
-    position:absolute;
+    width: 480px;
+    height: 399px;
+    position: absolute;
 }
 
 @mixin main-button {
     background-color: #fdb818;
-    color:#453A94;
+    color: #453A94;
     margin: 15px 30px 15px 0;
-    border:none;
-    }
+    border: none;
+}
 
 @mixin beyond-title {
-    width:auto;
-    height:26px;
-    position:absolute;
-    font-size:14px;
-    font-weight:bold;
-     border-bottom: 3px solid #fdb818;
-    }
+    width: auto;
+    height: 26px;
+    position: absolute;
+    font-size: 14px;
+    font-weight: bold;
+    border-bottom: 3px solid #fdb818;
+}
 
 @mixin article-left {
-    top:300px;
-    }
-
-
+    top: 300px;
+}
 
 body {
     font-family: 'Roboto Mono', monospace;
     font-size: 18px;
     line-height: 150%;
-    }
-
-footer {
-    height:195px;
-    border-top:2px solid #CFCFCF;
 }
 
 footer {
-  .navbar-default .navbar-nav > li > a{
-        color:#616161;
-        padding-right:50px;
+    height: 195px;
+    border-top: 2px solid #CFCFCF;
+}
+
+footer {
+    .navbar-default .navbar-nav>li>a {
+        color: #616161;
+        padding-right: 50px;
     }
-    
-  .navbar {
-        margin-bottom:0;
+    .navbar {
+        margin-bottom: 0;
     }
-    
-  .navbar-nav {
-        margin:0 100px 15px 200px;
-        padding-left:45px;
+    .navbar-nav {
+        margin: 0 100px 15px 200px;
+        padding-left: 45px;
         display: table;
         float: none;
     }
-    
     .navbar-default {
-      padding-top:50px;
+        padding-top: 50px;
     }
-    
     hr {
         border-top: 2px solid #CFCFCF;
-        margin-top:0;
+        margin-top: 0;
     }
 }
 
 .footer-icon {
-    float:left;
-    vertical-align:middle;
-    position:relative;
+    float: left;
+    vertical-align: middle;
+    position: relative;
 }
 
 .footer-icon2 {
-     float:right;
-    vertical-align:middle;
-    position:relative;
-    bottom:60px;
-    }
+    float: right;
+    vertical-align: middle;
+    position: relative;
+    bottom: 60px;
+}
 
 .wrapper {
-    margin:0 40px 0 40px;
+    margin: 0 40px 0 40px;
 }
 
 h1 {
     font-family: 'Fira Sans Extra Condensed', sans-serif;
     font-size: 58px;
-    color:#626262;
+    color: #626262;
 }
 
 h2 {
     font-family: 'Fira Sans Extra Condensed', sans-serif;
     font-size: 42px;
-    color:#626262;
+    color: #626262;
 }
 
 h3 {
     font-family: 'Fira Sans Extra Condensed', sans-serif;
     font-size: 24px;
-    color:#626262;
+    color: #626262;
 }
 
 h4 {
-    color:#626262;
-    font-size:20px;
+    color: #626262;
+    font-size: 20px;
 }
 
 p {
-    color:#626262;
+    color: #626262;
 }
 
 .back-img {
@@ -132,7 +126,7 @@ p {
 }
 
 .main-title h1 {
-    color:#fdb818;
+    color: #fdb818;
 }
 
 .main-title h2 {
@@ -141,201 +135,196 @@ p {
 
 .navbar-default {
     background: none;
-    border:none;
+    border: none;
 }
 
 .back-img ul {
-    float:right;
+    float: right;
 }
 
-.navbar-default .navbar-nav > li > a {
+.navbar-default .navbar-nav>li>a {
     font-size: 14px;
     padding: 35px 30px 0 0;
     color: #fff;
-    font-weight:bold;
+    font-weight: bold;
 }
 
 .top-button {
     @include main-button;
-    width:208px;
-    height:54px;  
- }
+    width: 208px;
+    height: 54px;
+}
 
 .top-button:active {
     background-color: #453A94;
-    color:#fff;
-   }
+    color: #fff;
+}
 
 .news-button {
     @include main-button;
-    width:188px;
-    height:54px;
+    width: 188px;
+    height: 54px;
     margin: 10px 30px 15px 145px;
-  }
+}
 
 .tours-button {
     @include main-button;
-    width:208px;
-    height:54px;
-    margin-left:60px;
+    width: 208px;
+    height: 54px;
+    margin-left: 60px;
 }
 
 .news-box {
-    width:480px;
-    height:263px;
-    background-color:#fff;
-    margin-top:656px;
-    float:right;
-    margin-top:-80px;
-    margin-right:35px;
+    width: 480px;
+    height: 263px;
+    background-color: #fff;
+    margin-top: 656px;
+    float: right;
+    margin-top: -80px;
+    margin-right: 35px;
     border: 1px solid #CFCFCF;
-    box-shadow:5px 5px 18px #888888;
+    box-shadow: 5px 5px 18px #888888;
 }
 
 .news-box h2 {
-    color:#453A94;
-    text-align:center;
-    padding:15px 0 10px 0;
+    color: #453A94;
+    text-align: center;
+    padding: 15px 0 10px 0;
 }
 
 .news-box hr {
-    color:#CFCFCF;
+    color: #CFCFCF;
 }
 
 .date-box {
-    font-size:14px;
-    color:#453A94;
-    font-weight:bold;
-    padding-top:15px;
-    padding-left:15px;
+    font-size: 14px;
+    color: #453A94;
+    font-weight: bold;
+    padding-top: 15px;
+    padding-left: 15px;
 }
 
 .tours-logos {
-    margin:100px 0 100px 0;
+    margin: 100px 0 100px 0;
 }
 
 .image-frame {
-  position: relative;
-  height:700px;
-margin-top:60px;
-margin-bottom:20px;
+    position: relative;
+    height: 700px;
+    margin-top: 60px;
+    margin-bottom: 20px;
 }
 
 .img1 {
-  position: absolute;
-  z-index: 1;
+    position: absolute;
+    z-index: 1;
 }
 
 .img2 {
- position: absolute;
-  z-index: 2;
-  top: 80px;
-  left:280px;
+    position: absolute;
+    z-index: 2;
+    top: 80px;
+    left: 280px;
 }
 
 .img3 {
-  position: absolute;
-  right:290px;
+    position: absolute;
+    right: 290px;
     top: 80px;
-  z-index: 2;
+    z-index: 2;
 }
 
-.ig4 {
- position: absolute;
-  z-index: 1;
-  right:0;
+.img4 {
+    position: absolute;
+    z-index: 1;
+    right: 0;
 }
 
 .title1 {
-   @include article-title;
-    right:0;
+    @include article-title;
+    right: 0;
 }
 
 .title2 {
-  @include article-title;
-   }
+    @include article-title;
+}
 
 .title1 h1 {
-    padding-top:100px;
-    padding-left:120px;
+    padding-top: 100px;
+    padding-left: 120px;
 }
 
 .title2 h1 {
-    padding-top:100px;
-    padding-left:25px;
+    padding-top: 100px;
+    padding-left: 25px;
 }
 
 .article1 {
     @include article-body;
-    left:700px;
-    top:300px;
+    left: 700px;
+    top: 300px;
 }
 
 .article1 p {
-    padding-bottom:20px;
+    padding-bottom: 20px;
 }
 
 .article2 {
     @include article-body;
-    top:300px;
-    margin-left:45px;
+    top: 300px;
+    margin-left: 45px;
 }
 
 .article3 {
     @include article-body;
     @include article-left;
-    }
+}
 
-.article2 { 
-    
+.article2 {
     h4 {
-    font-weight:bold;
-    font-size:20px;
+        font-weight: bold;
+        font-size: 20px;
     }
-    
     h2 {
-     font-weight:bold;
-     color:#453A94;
-     padding-bottom:25px;
+        font-weight: bold;
+        color: #453A94;
+        padding-bottom: 25px;
     }
-    
     p {
-        line-height:90%;
+        line-height: 90%;
     }
-   
 }
 
 .beyond1 {
     @include beyond-title;
-    left:120px;
-    top:90px;
-   
+    left: 120px;
+    top: 90px;
 }
 
 .beyond2 {
     @include beyond-title;
-    left:25px;
-    top:90px;
+    left: 25px;
+    top: 90px;
 }
 
 .beyond3 {
     @include beyond-title;
-  margin:20px 0 0 -38px;
+    margin: 20px 0 0 -38px;
 }
 
 .center-title {
-    text-align:center;
-    color:#453A94;
-    padding:70px 0 70px 0;
+    text-align: center;
+    color: #453A94;
+    padding: 70px 0 70px 0;
 }
 
 .text-box {
-    width:380px;
-    height:242px;
-    box-shadow:5px 5px 18px #CFCFCF;
-    display:inline-block;
-    text-align:center;
-  }
+    width: 380px;
+    height: 242px;
+    box-shadow: 5px 5px 18px #CFCFCF;
+    display: inline-block;
+    text-align: center;
+}
 
 .text-box p {
     margin: 0;
@@ -347,141 +336,139 @@ margin-bottom:20px;
 }
 
 .text-box b {
-    color:#453A94;
+    color: #453A94;
 }
 
 .text-box-middle {
     font-size: 24px;
-    background-color:#fdb818;
-    line-height:160%;
+    background-color: #fdb818;
+    line-height: 160%;
 }
 
 .text-box-middle p {
-    color:#453A94;
-    }
+    color: #453A94;
+}
 
 .weather-box {
-    width:1180px;
-    height:269px;
-    border:1px solid #CFCFCF;
-    display:inline-block;
-    margin-top:90px;
+    width: 1180px;
+    height: 269px;
+    border: 1px solid #CFCFCF;
+    display: inline-block;
+    margin-top: 90px;
 }
 
 .weather1 {
-    width:590px;
-    height:269px;
-    border-right:1px solid #CFCFCF;
-    display:inline-block;
+    width: 590px;
+    height: 269px;
+    border-right: 1px solid #CFCFCF;
+    display: inline-block;
 }
 
 .weather2 {
-    width:575px;
-    height:269px;
-    display:inline-block;
-    padding-left:35px;
-    
+    width: 575px;
+    height: 269px;
+    display: inline-block;
+    padding-left: 35px;
 }
 
 .weather-entry {
-    border-right:2px solid #CFCFCF;
-    padding-right:40px;
-    padding-bottom:75px;
-    margin:100px 0 0px 0px;
-    display:inline-block;
-    width:150px;
-    height:64px;
+    border-right: 2px solid #CFCFCF;
+    padding-right: 40px;
+    padding-bottom: 75px;
+    margin: 100px 0 0px 0px;
+    display: inline-block;
+    width: 150px;
+    height: 64px;
 }
 
 .weather1:first-child {
-    padding-left:50px;
+    padding-left: 50px;
 }
 
 .weather-entry-last {
-    padding-right:40px;
-    padding-bottom:75px;
-    margin:100px 0 0px 0px;
-    display:inline-block;
-    width:150px;
-    height:64px;
-    
+    padding-right: 40px;
+    padding-bottom: 75px;
+    margin: 100px 0 0px 0px;
+    display: inline-block;
+    width: 150px;
+    height: 64px;
 }
 
-.weather-entry, .weather-entry-last {
-    
+.weather-entry,
+.weather-entry-last {
     h4 {
-        font-size:50px;
-           }
+        font-size: 50px;
+    }
     p {
-        margin-top:10px;
-        margin-bottom:10px;
-        text-align:center;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        text-align: center;
     }
 }
 
 .weather2 .weather-entry {
-    margin-left:100px;
-    padding-right:20px;
+    margin-left: 100px;
+    padding-right: 20px;
 }
 
-.weather2 .weather-entry p, .weather2 .weather-entry-last p {
-    line-height:250%;
-    margin-top:-8px;
+.weather2 .weather-entry p,
+.weather2 .weather-entry-last p {
+    line-height: 250%;
+    margin-top: -8px;
 }
 
 .weather2 .weather-entry-last {
-    padding-left:-10px;
+    padding-left: -10px;
 }
 
 .weather2 h2 {
-    padding-right:45px;
+    padding-right: 45px;
 }
 
 .weather-box h2 {
-    text-align:center;
-    padding-top:20px;
-    font-weight:bold;
-    }
+    text-align: center;
+    padding-top: 20px;
+    font-weight: bold;
+}
 
 .list-number {
     font-family: 'Fira Sans Extra Condensed', sans-serif;
-    color:#fdb818;
-    font-size:42px;
+    color: #fdb818;
+    font-size: 42px;
 }
 
 .six-steps p {
-    padding-bottom:25px;
-    
+    padding-bottom: 25px;
 }
 
 .google-map-img {
-    padding:50px 0 35px 0;
+    padding: 50px 0 35px 0;
 }
 
 .strelica {
-    width:30px;
+    width: 30px;
     margin: 0 auto;
-    padding:70px 0 0 0;
+    padding: 70px 0 0 0;
 }
 
 .center-button {
-    width:320px;
-    margin:0 auto;
+    width: 320px;
+    margin: 0 auto;
     padding: 50px 0 50px 0;
 }
 
 .footer-left {
-    font-size:14px;
-    float:left;
-    font-weight:bold;
+    font-size: 14px;
+    float: left;
+    font-weight: bold;
 }
 
 .footer-right {
-    font-size:14px;
-    float:right;
-    font-weight:bold;
+    font-size: 14px;
+    float: right;
+    font-weight: bold;
 }
 
 .social-icons {
-    padding-left:18px;
+    padding-left: 20px;
 }
