--- a/css/lisbon.css
+++ b/css/lisbon.css
@@ -11,14 +11,14 @@ footer .navbar-default .navbar-nav > li > a {
   color: #616161;
   padding-right: 50px; }
 footer .navbar {
-  margin-bottom: 0; }
+  margin-bottom: -15px; }
 footer .navbar-nav {
   margin: 0 100px 15px 200px;
   padding-left: 45px;
   display: table;
   float: none; }
 footer .navbar-default {
-  padding-top: 50px; }
+  padding-top: 35px; }
 footer hr {
   border-top: 2px solid #CFCFCF;
   margin-top: 0; }
@@ -430,5 +430,25 @@ p {
 
 .social-icons {
   padding-left: 20px; }
+
+.tours-box {
+  width: 580px;
+  height: 670px;
+  box-shadow: 5px 5px 18px #888888;
+  margin-top: 80px;
+  margin-bottom: -16px; }
+  .tours-box h2 {
+    color: #fdb818;
+    padding: 30px 20px 15px 20px;
+    margin: 0;
+    text-align: center;
+    font-weight: bold; }
+  .tours-box p {
+    padding: 20px 15px 0 15px;
+    line-height: 140%; }
+
+.tours-row .tours-button {
+  margin: -30px 0 0 180px;
+  z-index: auto; }
 
 /*# sourceMappingURL=lisbon.css.map */
