--- a/scss/lisbon.scss
+++ b/scss/lisbon.scss
@@ -52,7 +52,7 @@ footer {
         padding-right: 50px;
     }
     .navbar {
-        margin-bottom:-15px;
+        margin-bottom: -15px;
     }
     .navbar-nav {
         margin: 0 100px 15px 200px;
@@ -244,6 +244,14 @@ p {
     z-index: 1;
     right: 0;
 }
+
+.img5 {
+    z-index: 2;
+    display:inline-block;
+    position:absolute;
+    left:600px;
+    padding-top:180px;
+    }
 
 .pages-title {
     h1 {
@@ -520,29 +528,90 @@ p {
 }
 
 .tours-box {
-    width:580px;
-    height:670px;
+    width: 580px;
+    height: 670px;
     box-shadow: 5px 5px 18px #888888;
-    margin-top:80px;
-    margin-bottom:-16px;
-    
+    margin-top: 80px;
+    margin-bottom: -16px;
     h2 {
-    color: #fdb818;
-    padding:30px 20px 15px 20px;
-    margin: 0;
-    text-align:center;
-    font-weight:bold;
-     }
-    
+        color: #fdb818;
+        padding: 30px 20px 15px 20px;
+        margin: 0;
+        text-align: center;
+        font-weight: bold;
+    }
     p {
-    padding:20px 15px 0 15px;
-    line-height:140%;
+        padding: 20px 15px 0 15px;
+        line-height: 140%;
     }
-    
-    }
+}
+
 .tours-row {
     .tours-button {
-        margin:-30px 0 0 180px;
-        z-index:auto;
+        margin: -30px 0 0 180px;
+        z-index: auto;
     }
+}
+
+.tours-form {
+    width: 780px;
+    height: 873px;
+    box-shadow: 5px 5px 18px #888888;
+    z-index: 1;
+    margin-top: 100px;
+    padding-top: 0;
+    display:inline-block;
+    position:relative;
+    .title-left {
+        border: none;
+        margin-left: 50px;
+    }
+    .beyond2 {
+        top: 55px;
+    }
+    .title-left h1 {
+        padding-top: 73px;
+    }
+}
+
+.form-box {
+    margin-left: 75px;
+    padding-top: 260px;
+    width: 380px;
+    height: 545px;
+    .form-control {
+        height: 54px;
+        font-size: 16px;
+        font-weight: bold;
+    }
+    label {
+        font-size: 14px;
+        color: #626262;
+    }
+    .tours-button {
+        margin-top: 30px;
+    }
+}
+
+::-webkit-input-placeholder {
+    font-weight: normal;
+}
+
+:-moz-placeholder {
+    /* Firefox 18- */
+    font-weight: normal;
+}
+
+::-moz-placeholder {
+    /* Firefox 19+ */
+    font-weight: normal;
+}
+
+:-ms-input-placeholder {
+    font-weight: normal;
+}
+
+.form-img {
+    height:800px;
+    width:960px;
 }
