--- a/css/lisbon.css
+++ b/css/lisbon.css
@@ -5,7 +5,8 @@ body {
 
 footer {
   height: 195px;
-  border-top: 2px solid #CFCFCF; }
+  border-top: 2px solid #CFCFCF;
+  margin-top: 100px; }
 
 footer .navbar-default .navbar-nav > li > a {
   color: #616161;
@@ -85,6 +86,15 @@ p {
 .main-title h2 {
   color: #fff; }
 
+.center-title-main {
+  text-align: center;
+  color: #453A94;
+  padding: 70px 0 70px 0; }
+
+.center-title-guides {
+  text-align: center;
+  padding: 300px 0 70px 0; }
+
 .navbar-default {
   background: none;
   border: none; }
@@ -126,7 +136,7 @@ p {
   border: none;
   width: 208px;
   height: 54px;
-  margin-left: 60px; }
+  margin: 0 30px 0 60px; }
 
 .news-box {
   width: 480px;
@@ -160,7 +170,7 @@ p {
 .image-frame {
   position: relative;
   height: 700px;
-  margin-top: 60px;
+  margin-top: 100px;
   margin-bottom: 20px; }
 
 .img1 {
@@ -189,7 +199,7 @@ p {
   display: inline-block;
   position: absolute;
   left: 600px;
-  padding-top: 180px; }
+  padding-top: 200px; }
 
 .pages-title h1 {
   color: #FFF; }
@@ -488,7 +498,8 @@ p {
     font-size: 14px;
     color: #626262; }
   .form-box .tours-button {
-    margin-top: 30px; }
+    margin-top: 20px;
+    margin-bottom: 20px; }
 
 ::-webkit-input-placeholder {
   font-weight: normal; }
@@ -507,5 +518,58 @@ p {
 .form-img {
   height: 800px;
   width: 960px; }
+
+.guide-box-left {
+  width: 480px;
+  height: 571px;
+  text-align: left;
+  border: 2px solid #CFCFCF;
+  padding: 30px 100px 20px 25px;
+  line-height: 160%;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+  margin-bottom: 30px; }
+  .guide-box-left h1 {
+    padding-bottom: 30px; }
+
+.guide-img-left {
+  display: inline-block;
+  position: absolute;
+  z-index: 2;
+  left: 400px;
+  bottom: 294px; }
+
+.guide-box-right {
+  width: 480px;
+  height: 571px;
+  text-align: right;
+  border: 2px solid #CFCFCF;
+  padding: 30px 25px 20px 100px;
+  line-height: 160%;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+  right: -100px;
+  margin-bottom: 30px; }
+  .guide-box-right h1 {
+    padding-bottom: 30px; }
+
+.guide-img-right {
+  display: inline-block;
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  top: 133px; }
+
+.contact-button {
+  background-color: #fdb818;
+  color: #453A94;
+  margin: 15px 30px 15px 0;
+  border: none;
+  width: 208px;
+  height: 54px;
+  margin-top: 130px;
+  margin-right: 80px; }
 
 /*# sourceMappingURL=lisbon.css.map */
