--- a/scss/lisbon.scss
+++ b/scss/lisbon.scss
@@ -35,6 +35,11 @@
     margin: auto;
 }
 
+@mixin center-title {
+    text-align: center;
+    color: #453A94;
+}
+
 body {
     font-family: 'Roboto Mono', monospace;
     font-size: 18px;
@@ -44,6 +49,7 @@ body {
 footer {
     height: 195px;
     border-top: 2px solid #CFCFCF;
+    margin-top:100px;
 }
 
 footer {
@@ -138,6 +144,16 @@ p {
     color: #fff;
 }
 
+.center-title-main {
+    @include center-title;
+    padding: 70px 0 70px 0;
+
+}
+
+.center-title-guides {
+    text-align:center;
+    padding:300px 0 70px 0;
+}
 .navbar-default {
     background: none;
     border: none;
@@ -176,7 +192,7 @@ p {
     @include main-button;
     width: 208px;
     height: 54px;
-    margin-left: 60px;
+    margin:0 30px 0 60px;
 }
 
 .news-box {
@@ -216,7 +232,7 @@ p {
 .image-frame {
     position: relative;
     height: 700px;
-    margin-top: 60px;
+    margin-top: 100px;
     margin-bottom: 20px;
 }
 
@@ -250,7 +266,7 @@ p {
     display:inline-block;
     position:absolute;
     left:600px;
-    padding-top:180px;
+    padding-top:200px;
     }
 
 .pages-title {
@@ -589,7 +605,8 @@ p {
         color: #626262;
     }
     .tours-button {
-        margin-top: 30px;
+        margin-top: 20px;
+        margin-bottom:20px;
     }
 }
 
@@ -614,4 +631,65 @@ p {
 .form-img {
     height:800px;
     width:960px;
+}
+
+.guide-box-left {
+    width:480px;
+    height:571px;
+    text-align: left;
+    border:2px solid #CFCFCF;
+    padding:30px 100px 20px 25px;
+    line-height:160%;
+    display:inline-block;
+    position:relative;
+    z-index: 1;
+    margin-bottom:30px;
+        
+    h1 {
+        padding-bottom:30px;
+        }
+}
+
+.guide-img-left {
+    display:inline-block;
+    position:absolute;
+    z-index:2;
+    left:400px;
+    bottom:294px;
+}
+
+.guide-box-right {
+    
+    width:480px;
+    height:571px;
+    text-align: right;
+    border:2px solid #CFCFCF;
+    padding:30px 25px 20px 100px;
+    line-height:160%;
+    display:inline-block;
+    position:relative;
+    z-index: 1;
+    right:-100px;
+    margin-bottom:30px;
+        
+    h1 {
+        padding-bottom:30px;
+        
+    }
+    }
+
+.guide-img-right {
+    display:inline-block;
+    position:absolute;
+    z-index:2;
+    left:0;
+    top:133px;
+}
+
+.contact-button {
+    @include main-button;
+    width: 208px;
+    height: 54px;
+    margin-top:130px;
+    margin-right:80px;
 }
